--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ main {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     font-style: normal;
+    width: 100%;
 }
 
 #input-wrapper {
     margin: .25em 1em;
     padding: .5em .75em;
-    width: 200px;
+    /* width: 200px; */
     border: 1px solid black;
 }
 
@@ -23,7 +24,7 @@ main {
     margin: 0 1em;
     padding: .5em .75em;
     position: relative;
-    width: 200px;
+    /* width: 200px; */
     border: 1px solid black;
 }
 
@@ -54,6 +55,10 @@ main {
     text-align: center;
 }
 
+#calendar-wrapper .body table td {
+    height: 10vw;
+}
+
 .today {
     background-color: lightblue;
     border-radius: 0.35em;
@@ -62,22 +67,3 @@ main {
 #legend {
     margin-top: 2em;
 }
-
-/* #calendar-wrapper .body .row {
-    height: 1em;
-    position: relative;
-    margin-bottom: .5em;
-
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#calendar-wrapper .body .calendar-header {
-    border-bottom: 2px solid black;
-    margin-bottom: .75em;
-}
-
-#calendar-wrapper .body span {
-    text-align: center;
-} */
